package com.zegline.thubot.core;

public class QuestionSuggestions {
    
}
